# crewai-test-project

./: .gitignore  README.md  cleanup_and_upload.py  docker-compose.yml  pyproject.toml  requirements.txt  upload_metadata.py
Reports/: Executor_Report.md  Knowledge_Report.md  Metadata_Report.md  Planner_Report.md  Query_Builder_Report.md
output/: business_context.md  data_analysis_task.md  executed_queries.md  generated_queries.sql  query_20250612_212159.sql  query_20250612_212746.sql  query_20250612_213718.sql  query_20250613_103724.sql  query_20250613_104842.sql  query_20250613_110238.sql  query_20250613_113106.sql  query_20250613_125940.sql  query_20250613_131300.sql  query_20250613_131658.sql  query_20250613_132146.sql  query_20250613_134804.sql  query_20250613_134928.sql  query_20250613_140638.sql  query_20250613_140804.sql  query_20250613_143730.sql  query_20250613_163502.sql  schema_analysis.md
src/test1/: crew.py  main.py  setup_weaviate.py
src/test1/config/: agents.yaml  tasks.yaml
src/test1/tools/: athena_tool.py  weaviate_tool.py
src/test1/utils/: llm_wrapper.py
